--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -273,8 +273,9 @@
     <Content Include="Views\Employees\Delete.cshtml" />
     <Content Include="Views\Employees\Details.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
-    <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\Employees\CustomersIndex.cshtml" />
     <Content Include="Views\Employees\DayIndex.cshtml" />
+    <Content Include="Views\Employees\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
