--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Employees\CustomersIndex.cshtml" />
     <Content Include="Views\Employees\DayIndex.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\Customers\SeePinOnMap.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
